# MLIR_Tasks

./: README.md  bufferized.mlir  final_output.ll  gemm.ll  gemm.mlir  llvm.mlir  loopified.mlir  lowered_output.mlir  vecvec4.mlir
matmul/: gemm.ll  gemm.mlir  gemm_affine.mlir  gemm_func_llvm.mlir  gemm_llvm.mlir  gemm_llvm_with_casts.mlir  gemm_lowered_affine.mlir  gemm_lowered_scf.mlir
project/: CMakeLists.txt
project/lib/: CMakeCache.txt  VecVecDialect.cpp
task4/: CMakeLists.txt
task4/include/: LinalgOps.td  LinalgStructuredOps.td  VecVecDialect.h  VecVecOps.h
task4/lib/: CTestTestfile.cmake  LinalgDialect.cpp  LinalgOps.cpp  LowerVecVecPass.cpp  Makefile  VecVecDialect.cpp  VecVecOps.cpp  cmake_install.cmake
task4/test/: example.mlir  vec.myop
task4/tools/: main.cpp
task5/: vecvec.ll  vecvec_example.mlir
task5/vecvec/: vecvec.ll  vecvec.mlir  vecvec_affine.mlir  vecvec_func_llvm.mlir  vecvec_llvm.mlir  vecvec_llvm_with_casts.mlir  vecvec_lowered_affine.mlir  vecvec_lowered_scf.mlir
